src/test/deca/context/valid/self/égalité.deca
{
println(2==2);
println(2==1);
}