src/test/deca/context/invalid/self/mauvaisTypeComparaison.deca
{
    boolean b = 2>true;
}